cargo-features = ["strip"]

[package]
name = "rn"
description = "Utility for displaying the current time using the Misalian Seximal Units with Kunimunean Extensions."
authors = ["Ethan Wu <ethanwu@cs.ucsb.edu>"]
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2"
radix_fmt = "1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

